--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-container-query",
   "version": "0.0.1",
   "description": "Container Query for React Component",
+  "author": "Daiwei Lu <daiweilu123@gmail.com> (http://daiwei.lu)",
   "main": "./lib/index.js",
   "jsnext:main": "./src/index.js",
   "repository": {
@@ -16,12 +17,11 @@
     "element query",
     "responsive"
   ],
-  "author": "Daiwei Lu",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/d6u/react-container-query/issues"
   },
-  "homepage": "https://github.com/d6u/react-container-query#readme",
+  "homepage": "https://github.com/d6u/react-container-query",
   "files": [
     "lib",
     "src"
