--- a/package.json
+++ b/package.json
@@ -36,6 +36,14 @@
     "eslint": "^1.7.1",
     "eslint-config-rackt": "1.1.0",
     "eslint-plugin-react": "^3.6.3",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.15",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-spec-reporter": "0.0.23",
+    "karma-webpack": "^1.7.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-mixin": "^3.0.3",
@@ -47,13 +55,14 @@
   },
   "scripts": {
     "lint": "eslint src webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "check": "npm run lint",
+    "test": "karma start",
+    "check": "npm run lint && npm test",
     "clean": "rimraf lib",
     "build": "babel src --out-dir lib",
     "preversion": "npm run check",
     "postversion": "git push && git push --tags",
     "prepublish": "npm run clean && npm run build",
+    "watch:test": "karma start --no-single-run",
     "demo": "webpack"
   }
 }
