--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "karma-sourcemap-loader": "^0.3.6",
     "karma-spec-reporter": "0.0.23",
     "karma-webpack": "^1.7.0",
+    "object-extend": "^0.5.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-mixin": "^3.0.3",
@@ -55,11 +56,14 @@
     "react": "^0.14.0"
   },
   "scripts": {
-    "lint": "eslint src webpack.config.js",
+    "lint": "eslint src webpack.config.*",
     "test": "karma start",
     "check": "npm run lint && npm test",
     "clean": "rimraf lib",
-    "build": "babel src --out-dir lib",
+    "build:lib": "babel src --out-dir lib",
+    "build:umd": "webpack src/index.js dist/react-container-query.js --config webpack.config.development.js",
+    "build:umd:min": "webpack src/index.js dist/react-container-query.min.js --config webpack.config.production.js",
+    "build": "npm run build:lib && npm run build:umd && npm run build:umd:min",
     "preversion": "npm run check",
     "postversion": "git push && git push --tags",
     "prepublish": "npm run clean && npm run build",
