--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "eslint": "^1.7.1",
     "eslint-config-rackt": "1.1.0",
     "eslint-plugin-react": "^3.6.3",
+    "isparta-loader": "^2.0.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.15",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-sauce-launcher": "^0.3.0",
     "karma-sourcemap-loader": "^0.3.6",
