--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "webpack": "^1.11.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   },
   "scripts": {
     "lint": "eslint src webpack.config.*",
