--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015-loose": "^6.1.3",
     "babel-preset-react": "^6.3.13",
+    "classnames": "^2.2.2",
     "eslint": "^1.7.1",
     "eslint-config-rackt": "1.1.0",
     "eslint-plugin-react": "^3.6.3",
