--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "karma-webpack": "^1.7.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-mixin": "^3.0.3",
     "rimraf": "^2.5.0",
     "webpack": "^1.11.0"
   },
@@ -71,7 +70,6 @@
     "preversion": "npm run check",
     "postversion": "git push && git push --tags",
     "prepublish": "npm run clean && npm run build",
-    "watch:test": "karma start --no-single-run",
-    "demo": "webpack --config webpack.config.demo.js"
+    "watch:test": "karma start --no-single-run"
   }
 }
