--- a/circle.yml
+++ b/circle.yml
@@ -4,12 +4,11 @@ machine:
 test:
   override:
     - npm run check
-# deployment:
-#   release:
-#     tag: /v[0-9]+(\.[0-9]+)*/
-#     owner: d6u
-#     commands:
-#       - typings install
-#       - npm run build
-#       - echo -e "$NPM_USER\n$NPM_PASS\n$NPM_EMAIL" | npm login
-#       - npm publish
+deployment:
+  release:
+    tag: /v[0-9]+(\.[0-9]+)*/
+    owner: d6u
+    commands:
+      - npm run build
+      - echo -e "$NPM_USER\n$NPM_PASS\n$NPM_EMAIL" | npm login
+      - npm publish
