--- a/package.json
+++ b/package.json
@@ -28,38 +28,38 @@
     "src"
   ],
   "devDependencies": {
-    "babel-cli": "^6.3.15",
-    "babel-core": "^6.1.20",
-    "babel-eslint": "^5.0.0-beta4",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015-loose": "^6.1.3",
-    "babel-preset-react": "^6.3.13",
-    "classnames": "^2.2.2",
-    "eslint": "^1.7.1",
+    "babel-cli": "6.3.15",
+    "babel-core": "6.1.20",
+    "babel-eslint": "6.0.4",
+    "babel-loader": "6.2.0",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.3.13",
+    "classnames": "2.2.2",
+    "eslint": "1.7.1",
     "eslint-config-rackt": "1.1.0",
-    "eslint-plugin-react": "^3.6.3",
-    "isparta-loader": "^2.0.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.15",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-coverage": "^0.5.3",
-    "karma-jasmine": "^0.3.6",
-    "karma-sauce-launcher": "^0.3.0",
-    "karma-sourcemap-loader": "^0.3.6",
-    "karma-spec-reporter": "0.0.23",
-    "karma-webpack": "^1.7.0",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "rimraf": "^2.5.0",
-    "webpack": "^1.11.0"
+    "eslint-plugin-react": "3.6.3",
+    "isparta-loader": "2.0.0",
+    "jasmine-core": "2.4.1",
+    "karma": "0.13.15",
+    "karma-babel-preprocessor": "6.0.1",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-coverage": "0.5.3",
+    "karma-jasmine": "0.3.6",
+    "karma-sauce-launcher": "0.3.0",
+    "karma-sourcemap-loader": "0.3.6",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "1.7.0",
+    "react": "15.0.1",
+    "react-dom": "15.0.1",
+    "rimraf": "2.5.0",
+    "webpack": "1.11.0"
   },
   "scripts": {
     "lint": "eslint src webpack.config.*",
     "test": "karma start",
     "watch:test": "npm test -- --no-single-run",
     "check": "npm run lint && npm test",
-    "clean": "rimraf lib",
+    "clean": "rimraf lib dist",
     "build:lib": "babel src --out-dir lib",
     "build:umd": "webpack src/index.js dist/react-container-query.js --config webpack.config.development.js",
     "build:umd:min": "webpack src/index.js dist/react-container-query.min.js --config webpack.config.production.js",
