--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "babel-core": "6.7.7",
     "babel-eslint": "6.0.4",
     "babel-loader": "6.2.4",
-    "babel-preset-es2015": "6.6.0",
+    "babel-preset-es2015-loose": "7.0.0",
     "babel-preset-react": "6.5.0",
     "classnames": "2.2.4",
     "eslint": "1.10.3",
