Use babel plugin to generate coverage

--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "babel-core": "6.7.7",
     "babel-eslint": "6.0.4",
     "babel-loader": "6.2.4",
+    "babel-plugin-__coverage__": "0.111111.1",
     "babel-preset-es2015-loose": "7.0.0",
     "babel-preset-react": "6.5.0",
     "classnames": "2.2.4",
     "eslint": "1.10.3",
     "eslint-config-rackt": "1.1.1",
     "eslint-plugin-react": "5.0.1",
-    "isparta-loader": "2.0.0",
     "jasmine-core": "2.4.1",
     "karma": "0.13.22",
     "karma-babel-preprocessor": "6.0.1",
@@ -56,7 +56,7 @@
   },
   "scripts": {
     "lint": "eslint src webpack.config.*",
-    "test": "karma start",
+    "test": "env NODE_ENV=test karma start",
     "watch:test": "npm test -- --no-single-run",
     "check": "npm run lint && npm test",
     "clean": "rimraf lib dist",
