--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["react", "es2015-loose"]
+  "env": {
+    "development": {
+      "presets": ["react", "es2015-loose"]
+    },
+    "test": {
+      "presets": ["react", "es2015-loose"],
+      "plugins": [["__coverage__", {"ignore": "test/"}]]
+    }
+  }
 }
