--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "1.10.3",
     "eslint-config-rackt": "1.1.1",
     "eslint-plugin-react": "5.0.1",
+    "istanbul-combine": "^0.3.0",
     "jasmine-core": "2.4.1",
     "karma": "0.13.22",
     "karma-babel-preprocessor": "6.0.1",
@@ -55,11 +56,12 @@
     "webpack": "1.13.0"
   },
   "scripts": {
+    "clean": "rimraf lib dist coverage",
     "lint": "eslint src webpack.config.*",
-    "test": "env NODE_ENV=test karma start",
+    "test": "npm run clean && env NODE_ENV=test karma start",
     "watch:test": "npm test -- --no-single-run",
-    "check": "npm run lint && npm test",
-    "clean": "rimraf lib dist",
+    "coverage": "istanbul-combine -d coverage/summary -p both -r json -r html coverage/*-json/coverage-final.json",
+    "check": "npm run lint && npm test && npm run coverage",
     "build:lib": "babel src --out-dir lib",
     "build:umd": "webpack src/index.js dist/react-container-query.js --config webpack.config.development.js",
     "build:umd:min": "webpack src/index.js dist/react-container-query.min.js --config webpack.config.production.js",
