--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ deployment:
   codecov:
     branch: /.*/
     commands:
-      - bash <(curl -s https://codecov.io/bash)
+      - bash <(curl -s https://codecov.io/bash) -f coverage/summary/coverage-final.json
   release:
     tag: /v[0-9]+(\.[0-9]+)*/
     owner: d6u
