--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "jasmine-core": "2.4.1",
     "karma": "0.13.22",
     "karma-babel-preprocessor": "6.0.1",
+    "karma-browserstack-launcher": "1.0.0",
     "karma-chrome-launcher": "0.2.3",
     "karma-coverage": "0.5.5",
     "karma-jasmine": "0.3.8",
-    "karma-sauce-launcher": "0.3.1",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "1.7.0",
