--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-eslint": "6.0.4",
     "babel-loader": "6.2.4",
     "babel-plugin-__coverage__": "0.111111.1",
+    "babel-preset-es2015": "6.6.0",
     "babel-preset-es2015-loose": "7.0.0",
     "babel-preset-react": "6.5.0",
     "classnames": "2.2.4",
