--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "build:lib": "babel src --out-dir lib",
     "build:umd": "webpack src/index.js dist/react-container-query.js --config webpack.config.development.js",
     "build:umd:min": "webpack src/index.js dist/react-container-query.min.js --config webpack.config.production.js",
+    "build:examples": "./scripts/build-examples.sh",
     "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:umd:min",
     "preversion": "npm run check",
     "postversion": "git push && git push --tags"
