--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-eslint": "6.1.0",
     "babel-loader": "6.2.4",
     "babel-plugin-__coverage__": "11.0.0",
+    "babel-preset-es2015": "6.9.0",
     "babel-preset-es2015-loose": "7.0.0",
     "babel-preset-react": "6.11.1",
     "classnames": "2.2.5",
