Refactor to use element-resize-detector

--- a/package.json
+++ b/package.json
@@ -36,10 +36,16 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-es2015-loose": "7.0.0",
     "babel-preset-react": "6.11.1",
+    "browser-sync": "2.13.0",
     "classnames": "2.2.5",
+    "element-resize-detector": "1.1.5",
     "eslint": "2.13.1",
     "eslint-config-rackt": "1.1.1",
     "eslint-plugin-react": "5.2.2",
+    "gulp": "3.9.1",
+    "gulp-debug": "2.1.2",
+    "gulp-watch": "4.3.8",
+    "invariant": "2.2.1",
     "istanbul-combine": "^0.3.0",
     "jasmine-core": "2.4.1",
     "karma": "1.1.0",
@@ -51,11 +57,16 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "1.7.0",
+    "lodash": "4.13.1",
     "onchange": "2.5.0",
     "react": "15.1.0",
     "react-dom": "15.1.0",
     "rimraf": "2.5.2",
-    "webpack": "1.13.1"
+    "tslint": "3.13.0",
+    "typescript": "1.8.10",
+    "typings": "1.3.1",
+    "webpack": "1.13.1",
+    "yargs": "4.8.0"
   },
   "scripts": {
     "clean": "rimraf lib dist coverage",
