--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "env": {
     "development": {
-      "presets": ["react", "es2015-loose"]
+      "presets": ["react", "es2015"]
     },
     "test": {
-      "presets": ["react", "es2015-loose"],
+      "presets": ["react", "es2015"],
       "plugins": [["__coverage__", {"ignore": "test/"}]]
     }
   }
