Use BrowserStack for unit testing

--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "jasmine-core": "2.4.1",
     "karma": "1.1.0",
     "karma-babel-preprocessor": "6.0.1",
+    "karma-browserstack-launcher": "1.0.1",
     "karma-chrome-launcher": "1.0.1",
     "karma-coverage": "1.0.0",
     "karma-jasmine": "1.0.2",
-    "karma-sauce-launcher": "1.0.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "1.7.0",
