--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "lib",
     "src"
   ],
+  "dependencies": {
+    "element-resize-detector": "1.1.5"
+  },
   "devDependencies": {
     "babel-cli": "6.10.1",
     "babel-core": "6.10.4",
@@ -38,7 +41,6 @@
     "babel-preset-react": "6.11.1",
     "browser-sync": "2.13.0",
     "classnames": "2.2.5",
-    "element-resize-detector": "1.1.5",
     "eslint": "2.13.1",
     "eslint-config-rackt": "1.1.1",
     "eslint-plugin-react": "5.2.2",
