Remove logging in production build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "typings-custom/element-resize-detector.d.ts",
     "typings-custom/invariant.d.ts",
     "typings-custom/lodash.d.ts",
+    "typings-custom/process.env.NODE_ENV.d.ts",
     "src/index.ts"
   ]
 }
