--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "src"
   ],
   "dependencies": {
-    "element-resize-detector": "1.1.5"
+    "element-resize-detector": "1.1.5",
+    "lodash": "4.13.1"
   },
   "devDependencies": {
     "babel-cli": "6.10.1",
@@ -59,7 +60,6 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "1.7.0",
-    "lodash": "4.13.1",
     "onchange": "2.5.0",
     "react": "15.1.0",
     "react-dom": "15.1.0",
