--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
     "noFallthroughCasesInSwitch": true,
     "allowUnreachableCode": false,
     "forceConsistentCasingInFileNames": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "jsx": "react"
   },
   "include": [
-    "src/index.ts"
+    "src/index.tsx"
   ]
 }
