Update unit tests

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "3.9.0",
     "eslint-config-rackt": "1.1.1",
     "eslint-plugin-react": "6.4.1",
+    "expect": "1.20.2",
     "gulp": "3.9.1",
     "gulp-debug": "2.1.2",
     "gulp-watch": "4.3.10",
@@ -62,6 +63,7 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "1.8.0",
+    "mocha": "3.2.0",
     "onchange": "3.0.2",
     "react": "15.*",
     "react-dom": "15.*",
@@ -80,9 +82,10 @@
     "lint:js": "eslint config/webpack.config.*",
     "lint:ts": "tslint src/**/*.ts",
     "lint": "npm run lint:js && npm run lint:ts",
-    "unit-test": "env NODE_ENV=test karma start",
+    "test-client": "env NODE_ENV=test karma start",
+    "test-server": "env NODE_ENV=test mocha test/server",
     "pretest": "npm run clean && npm run build",
-    "test": "npm run lint && npm run unit-test",
+    "test": "npm run lint && npm run test-client && npm run test-server",
     "combine-coverage-results": "istanbul-combine -d coverage/summary -p both -r json -r html coverage/*-json/coverage-final.json",
     "ci": "npm test && npm run combine-coverage-results",
     "preversion": "npm run clean && npm run build"
