--- a/package.json
+++ b/package.json
@@ -33,45 +33,45 @@
     "resize-observer-lite": "0.2.1"
   },
   "devDependencies": {
-    "@types/lodash": "4.*",
-    "@types/react": "0.14.55",
-    "@types/react-dom": "0.14.19",
-    "babel-cli": "6.18.0",
-    "babel-core": "6.18.0",
-    "babel-eslint": "7.1.0",
-    "babel-loader": "6.2.7",
+    "@types/lodash": "4.14.54",
+    "@types/react": "15.0.14",
+    "@types/react-dom": "0.14.23",
+    "babel-cli": "6.23.0",
+    "babel-core": "6.23.1",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "6.3.2",
     "babel-plugin-__coverage__": "11.0.0",
-    "babel-preset-es2015": "6.18.0",
+    "babel-preset-es2015": "6.22.0",
     "babel-preset-es2015-loose": "8.0.0",
-    "babel-preset-react": "6.16.0",
-    "browser-sync": "2.17.5",
-    "eslint": "3.9.0",
+    "babel-preset-react": "6.23.0",
+    "browser-sync": "2.18.8",
+    "eslint": "3.17.0",
     "eslint-config-rackt": "1.1.1",
-    "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-react": "6.10.0",
     "expect": "1.20.2",
     "gulp": "3.9.1",
-    "gulp-debug": "2.1.2",
-    "gulp-watch": "4.3.10",
+    "gulp-debug": "3.1.0",
+    "gulp-watch": "4.3.11",
     "istanbul-combine": "^0.3.0",
     "jasmine-core": "2.5.2",
-    "karma": "1.3.0",
+    "karma": "1.5.0",
     "karma-babel-preprocessor": "6.0.1",
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
-    "karma-jasmine": "1.0.2",
+    "karma-jasmine": "1.1.0",
     "karma-sauce-launcher": "1.1.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.26",
+    "karma-spec-reporter": "0.0.30",
     "karma-webpack": "1.8.0",
     "mocha": "3.2.0",
-    "onchange": "3.0.2",
+    "onchange": "3.2.1",
     "react": "15.*",
     "react-dom": "15.*",
-    "rimraf": "2.5.4",
-    "tslint": "4.0.2",
-    "typescript": "2.1.4",
+    "rimraf": "2.6.1",
+    "tslint": "4.5.1",
+    "typescript": "2.2.1",
     "webpack": "1.13.3",
-    "yargs": "6.3.0"
+    "yargs": "7.0.1"
   },
   "scripts": {
     "clean": "rimraf lib dist coverage public",
