Add React and ReactDOM to peerDependencies
Fix #7

--- a/package.json
+++ b/package.json
@@ -73,6 +73,10 @@
     "webpack": "1.13.3",
     "yargs": "8.0.1"
   },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0",
+    "react-dom": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
+  },
   "scripts": {
     "clean": "rimraf lib dist coverage public",
     "build:lib": "tsc",
