--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-eslint": "7.2.3",
     "babel-loader": "6.3.2",
     "babel-plugin-__coverage__": "11.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-es2015-loose": "8.0.0",
     "babel-preset-react": "6.24.1",
