Fix error "ResizeObserver loop limit exceeded" in Chrome
This error appears in Chrome if the `ResizeObserver` callback is executed
too frequently. This fix limits its execution with `requestAnimationFrame`.

The error is not normally visible in Chrome’s console, only with
`window.addEventListener('error', e => console.error(e))`.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "lib",
+    "lib": ["dom", "es5"],
     "module": "commonjs",
     "noImplicitAny": true,
     "noImplicitThis": true,
