Use UNSAFE_ prefix for deprecated React lifecycle method name

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "declaration": true,
     "declarationDir": "lib",
     "module": "commonjs",
+    "lib": ["es6"],
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
