--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "lib",
-    "lib": ["es6"],
+    "lib": ["es6", "dom"],
     "module": "commonjs",
     "noImplicitAny": true,
     "noImplicitThis": true,
