--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
-# Javascript Node CircleCI 2.0 configuration file
+# Javascript Node CircleCI 2.1 configuration file
 #
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+# Check https://circleci.com/docs/language-javascript/ for more details
 #
 version: 2.1
 orbs:
@@ -8,14 +8,6 @@ orbs:
 jobs:
   build:
     executor: node/default # use the default executor defined within the orb
-    # docker:
-    #   # specify the version you desire here
-    #   - image: circleci/node:12.14
-
-    #   # Specify service dependencies here if necessary
-    #   # CircleCI maintains a library of pre-built images
-    #   # documented at https://circleci.com/docs/2.0/circleci-images/
-    #   # - image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
 
