Support React 18 as peer dependency
* Without this, when installing in a project with React 18, `npm install` would fail with unmet peer dependencies error (https://docs.npmjs.com/cli/v9/commands/npm-ci)
* Resolves https://github.com/react-container-query/react-container-query/issues/135

--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "yargs": "11.0.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0 || ^17",
-    "react-dom": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0 || ^17"
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0 || ^17 || ^18",
+    "react-dom": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0 || ^17 || ^18"
   },
   "scripts": {
     "clean": "rimraf lib dist coverage public",
